--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react-router-dom": "^6.14.0"
   }
 }
