--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "react-router-dom": "^6.14.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
